added non-functioning player labels

--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
 </head>
 <body>
     <div id="screen"></div>
+    <div id="p1Bar">
+        <div id="nameDisplay">NomeDiProva</div>
+        <div id="hpBar">
+            <div id="p1HpLine"></div>
+        </div>
+        <sub>888/888 HP</sub>
+    </div>
+
+    <div id="p2Bar">
+        <div id="nameDisplay">NomeDiProva</div>
+        <div id="hpBar">
+            <div id="p2HpLine"></div>
+        </div>
+        <sub>888/888 HP</sub>
+    </div>
+
     <div id="combatLine">
         <div class="player" id="p1"></div>
         <div class="player" id="p2"></div>
     </div>
+    <button>Inizia il match!</button>
 </body>
 <script src="script.js"></script>
 </html>
