Status bars now works!

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
     <div id="screen"></div>
-    <div id="p1Bar">
-        <div id="nameDisplay">NomeDiProva</div>
-        <div id="hpBar">
-            <div id="p1HpLine"></div>
+    <div class="statusBar hiddenLeft" id="p1Bar">
+        <div class="nameDisplay" id="p1Name"></div>
+        <div class="hpBar">
+            <div class="hpLine" id="p1HpLine"></div>
         </div>
-        <sub>888/888 HP</sub>
+        <sub id="p1HpNumeric"></sub>
     </div>
 
-    <div id="p2Bar">
-        <div id="nameDisplay">NomeDiProva</div>
-        <div id="hpBar">
-            <div id="p2HpLine"></div>
+    <div class="statusBar hiddenRight" id="p2Bar">
+        <div class="nameDisplay" id="p2Name"></div>
+        <div class="hpBar">
+            <div class="hpLine" id="p2HpLine"></div>
         </div>
-        <sub>888/888 HP</sub>
+        <sub id="p2HpNumeric"></sub>
     </div>
 
     <div id="combatLine">
